--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "nuka-carousel": "^4.5.11",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-redux": "^7.`1.1",
+    "react-redux": "^7.1.1",
     "react-reveal": "^1.2.2",
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
