--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
-    "slick-carousel": "^1.8.1"
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "eslint-plugin-prettier": "^3.1.0",
