--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://feroxes.github.io/weather_application",
   "name": "weather_app",
   "version": "0.1.0",
   "private": true,
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "eslint-plugin-prettier": "^3.1.0",
+    "gh-pages": "^3.1.0",
     "node-sass": "^4.12.0",
     "prettier": "1.18.2"
   },
@@ -26,7 +28,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,6 +46,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "homepage": "."
+  }
 }
