--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "homepage": "http://feroxes.github.io/weather_application",
   "name": "weather_app",
-  "version": "0.1.0",
+  "version": "0.2.0-beta-1",
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
